--- a/recipes/pampushky.html
+++ b/recipes/pampushky.html
@@ -7,7 +7,31 @@
 
     <body>
         <h1>Pampushky</h1>
+        <img src="../images/pampushky.jpg" alt="beautiful plump garlic rolls">
 
-        <img src="images/dog.jpg" alt="beautiful plump garlic rolls">
+        <h3>Description</h3>
+        <p>A traditional Ukrainian garlic bread. It is traditionally served with red borshch.</p>
+       
+        <h3>Ingredients</h3>
+        <ul>
+            <li>15g fresh yeast or 7g dried active yeast</li>
+            <li>1 tsp caster sugar</li>
+            <li>225ml warm water</li>
+            <li>400g strong white flour, plus extra for dusting</li>
+            <li>8g fine sea salt</li>
+            <li>3 tbsp sunflower oil, plus extra for oiling</li>
+            <li>20g wet (new) or regular garlic, crushed</li>
+            <li>1/2 bunch fresh parsley, finely chopped</li>
+            <li>1 duck egg (or chicken egg), beaten, to glaze</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>First make a ‘sponge’, which is a type of yeasty starter. Dissolve the yeast and sugar in the measurement water (make sure it’s blood temperature – hot water would kill the yeast!). Add 200g (7oz) of the flour and mix roughly. Cover with clingfilm and leave to prove in the refrigerator overnight.</li>
+            <li>The next morning, add the rest of the flour and fine sea salt to the starter and knead on a well-floured work surface until the dough is smooth and comes away from your hands easily.</li>
+            <li>Divide the dough into 8 pieces and shape into round buns. Put them side by side in an oiled round ovenproof dish or a 24cm (9½ inch) round cake tin, cover and let them prove again, this time in a warm place, until doubled in size. They will join together just like hot cross buns do.</li>
+            <li>Meanwhile, preheat the oven to 220°C/425°F/Gas Mark 7. To make the basting oil, simply stir the crushed garlic through the oil with a small pinch of sea salt and the parsley, then let it infuse.</li>
+            <li>When the pampushky look plump and ready, brush them generously with some beaten egg to glaze and bake for 20–25 minutes or until they form a glistening golden crust. Take them out and baste them with the garlic oil. Serve immediately.</li>
+        </ol>
     </body>
 </html>
