Add recipes for zeleny borshch and salat olivye

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/pampushky.html">Pampushky</a>
+        <a href="./recipes/zeleny-borshch.html">Zeleny Borshch</a>
+        <a href="./recipes/olivye.html">Salat Olivye</a>
     </body>
 </html>
