Make index more organized and add theme picture

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/pampushky.html">Pampushky</a>
-        <a href="./recipes/zeleny-borshch.html">Zeleny Borshch</a>
-        <a href="./recipes/olivye.html">Salat Olivye</a>
+
+        <h3>Recipes from Ukraine</h3>
+        <img src="./images/ukraine-flag.png" alt="flag of ukraine, equal rectangle halves of blue on top and yellow on bottom">
+
+        <ul>
+            <li><a href="./recipes/pampushky.html">Pampushky</a></li>
+            <li><a href="./recipes/zeleny-borshch.html">Zeleny Borshch</a></li>
+            <li><a href="./recipes/olivye.html">Salat Olivye</a></li>
+        </ul>
     </body>
 </html>
