Make index receptive to CSS editing

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes Project</title>
+        <link rel="stylesheet" href="./css/style-index.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="title">Ukrainian Recipes / Українські Pецепти</h1>
 
-        <h3>Recipes from Ukraine</h3>
-        <img src="./images/ukraine-flag.png" alt="flag of ukraine, equal rectangle halves of blue on top and yellow on bottom">
+        <img class="ua-flag" src="./images/ukraine-flag.png" alt="flag of ukraine, equal rectangle halves of blue on top and yellow on bottom">
 
-        <ul>
-            <li><a href="./recipes/pampushky.html">Pampushky</a></li>
-            <li><a href="./recipes/zeleny-borshch.html">Zeleny Borshch</a></li>
-            <li><a href="./recipes/olivye.html">Salat Olivye</a></li>
-        </ul>
+        <p>
+            <!-- I don't really like how these look-->
+            <button class="button"><a href="./recipes/pampushky.html">Pampushky</a></button>
+            <button class="button"><a href="./recipes/zeleny-borshch.html">Zeleny Borshch</a></button>
+            <button class="button"><a href="./recipes/olivye.html">Salat Olivye</a></button>
+        </p>
     </body>
 </html>
