Add first draft of CSS edits to pampushky

--- a/recipes/pampushky.html
+++ b/recipes/pampushky.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Pampushky</title>
+        <link rel="stylesheet" href="../css/style-pampushky.css">
     </head>
 
     <body>
-        <h1>Pampushky</h1>
-        <img src="../images/pampushky.jpg" alt="beautiful plump garlic rolls">
+        <h1 class="title">Pampushky / Пампушки</h1>
+        <img class="pampushky" src="../images/pampushky.jpg" alt="beautiful plump garlic rolls">
 
         <h3>Description</h3>
         <p>A traditional Ukrainian garlic bread. It is traditionally served with red borshch.</p>
