Add CSS to zeleny borshch recipe

--- a/recipes/zeleny-borshch.html
+++ b/recipes/zeleny-borshch.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Zeleny Borshch</title>
+        <link rel="stylesheet" href="../css/style-zeleny-borshch.css">
     </head>
 
     <body>
-        <h1>Zeleny Borshch</h1>
-        <img src="../images/zeleny-borshch.jpg" alt="green spinach soup">
+        <h1 class="title">Zeleny Borshch / Зелений Борщ</h1>
+        <img class="borshch" src="../images/zeleny-borshch.jpg" alt="green spinach soup">
 
         <h3>Description</h3>
         <p>A soup made from broth, sorrel leaves, and vegetables.</p>
