Add CSS to salat olivye recipe

--- a/recipes/olivye.html
+++ b/recipes/olivye.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Salat Olivye</title>
+        <link rel="stylesheet" href="../css/style-salat-olivye.css">
     </head>
 
     <body>
-        <h1>Salat Olivye</h1>
-        <img src="../images/olivye.jpg" alt="a potato salad packed with ham, carrots, peas, eggs, pickles, dill, mayo, and of course potatoes">
+        <h1 class="title">Salat Olivye / Салат Олів'є</h1>
+        <img class="olivye" src="../images/olivye.jpg" alt="a potato salad packed with ham, carrots, peas, eggs, pickles, dill, mayo, and of course potatoes">
 
         <h3>Description</h3>
         <p>A "salad" that is more like an actual main course. It's full of vegetables and protein, as well as drenched in mayo. Probably the least healthy salad out there, but delicious.</p>
